--- a/package.json
+++ b/package.json
@@ -4,16 +4,15 @@
   "description": "CLI tools for qConcept development",
   "main": "index.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "start": "babel-node index.js"
   },
   "author": "Aksel Gresvig <aksel@qlimt.com> (http://blog.akselgresvig.com/)",
   "license": "ISC",
   "dependencies": {
     "babel": "^5.0.9",
     "babel-eslint": "^2.0.2",
-    "commander": "^2.7.1"
-  },
-  "scripts": {
-    "start": "babel-node index.js"
+    "cli-color": "^0.3.3",
+    "commander": "^2.7.1",
+    "gm": "^1.17.0"
   }
 }
